feat(serv): Прошел тесты Maven.